--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,12 @@
 .container {
-  padding: 0 2rem;
+  padding: 25px;
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 50vh;
   flex: 1;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  align-content: flex-start;
 }
 
 .footer {
